Fixing TestMetaData failures